--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
         <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="{{ site.github.zip_url }}">Download ZIP</a></li>
+          <li class="download"><a class="buttons download" href="{{ site.github.zip_url }}">Download ZIP</a></li>
           <li><a class="buttons github" href="{{ site.github.repository_url }}">View On GitHub</a></li>
           <li><a class="buttons github" href="{{ site.github.owner_url }}">GitHub Profile</a></li>
           <li><a class="buttons" href="{{ site.github.owner_url }}">Games</a></li>
