--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
         <ul>
           <!-- <li class="download"><a class="buttons download" href="{{ site.github.zip_url }}">Download ZIP</a></li> -->
           <!-- <li><a class="buttons github" href="{{ site.github.repository_url }}">View On GitHub</a></li> -->
+          <li><a class="buttons" href="/">Home</a></li>
           <li><a class="buttons" href="/about">About</a></li>
           <li><a class="buttons" href="/games">Games</a></li>
           <li><a class="buttons" href="/portfolio">Portfolio</a></li>
